2010-01-13  Nick Clifton  <nickc@redhat.com>

	* config/tc-h8300.c (h8300_elf_section): New function - issue a
	warning message if a new section is created without setting any
	attributes for it.
	(md_pseudo_table): Intercept section creation pseudos.
	(md_pcrel_from): Replace abort with an error message.
	* config/obj-elf.c (obj_elf_section_name): Export this function.
	* config/obj-elf.h (obj_elf_section_name): Prototype.

2010-01-12  Alan Modra  <amodra@gmail.com>

	PR 11122
	* listing.c (print_source): Add one to line number.

2010-01-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.

2010-01-08  H.J. Lu  <hongjiu.lu@intel.com>

	* version.c (parse_args): Change to "Copyright 2010".

2010-01-06  Quentin Neill  <quentin.neill@amd.com>

	* config/tc-i386.c (cpu_arch): Add amdfam15.
	(i386_align_code): Add PROCESSOR_AMDFAM15 cases.
	* config/tc-i386.h (processor_type): Add PROCESSOR_AMDFAM15.
	* doc/c-i386.texi: Add amdfam15.

2010-01-04  Daniel Gutson  <dgutson@codesourcery.com>

	* config/tc-arm.c (do_neon_logic): Accept imm value
	in the third operand too.
	(operand_parse_code): OP_RNDQ_IMVNb renamed to
	OP_RNDQ_Ibig.
	(parse_operands): OP_NILO case removed, applied renaming.
	(insns): Neon shape changed for some logic instructions.

2010-01-04  Daniel Gutson  <dgutson@codesourcery.com>

	* config/tc-arm.c (do_neon_ldx_stx): Added
	validation for vector load/store insns.

2010-01-04  Edmar Wienskoski  <edmar@freescale.com>

	* config/tc-ppc.c (md_show_usage): Document -me500mc64.

2010-01-03  Daniel Gutson  <dgutson@codesourcery.com>

	* config/tc-arm.c (struct arm_it): New flag 'is_neon'.
	(NEON_ENC_*): Macros renamed to _NEON_ENC_*.
	(NEON_ENCODE): New macro.
	(check_neon_suffixes): New macro.
	(do_vfp_cond_or_thumb): Set the 'is_neon' flag.
	(do_vfp_nsyn_opcode): Likewise.
	(do_vfp_nsyn_nmul): Use the new 'NEON_ENCODE' macro.
	(do_vfp_nsyn_cmp): Likewise.