@@ -1,0 +1,5 @@
+	.text
+	.code 16
+	.p2align 2
+.foo:	
+	nop
